Rename package to @lokesh-stack/quill-image-pro with SEO improvements and add responsive image resize enhancements

--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,16 @@
         toolbar: toolbarOptions,
         resize: {
           locale: {},
+          toolbar: {
+            border: true,
+            align: true,
+            wrap: true,
+            imageActions: {
+              copy: true,
+              link: true,
+              delete: true
+            }
+          }
         },
       },
     });
